--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Vanilla Bootstrap v4.2.1 Theme</title>
+        <title>Tomo'Grow</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -26,21 +26,21 @@ https://templatemo.com/tm-526-vanilla
 
     <div class="fixed-side-navbar">
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="#home"><span>Intro</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#home"><span>Accueil</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#services"><span>Services</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Portfolio</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#our-story"><span>Our Story</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#contact-us"><span>Contact Us</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#our-story"><span>Notre Histoire</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact-us"><span>Contacter nous</span></a></li>
         </ul>
     </div>
 
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="first-content">
-                <h1>Vanilla</h1>
-                <span><em>Bootstrap</em> v4.2.1 Theme</span>
+                <center><h1>Tomo'Grow</h1></center>
+                <span><em>L'agriculture durable</em> de demain</span>
                 <div class="primary-button">
-                    <a href="#services">Discover More</a>
+                    <a href="#services">Découvrez en plus</a>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@ https://templatemo.com/tm-526-vanilla
             <div class="row">
                 <div class="col-md-4">
                     <div class="left-text">
-                        <h4>More About Vanilla</h4>
+                        <h4>A propos de Tomo'Grow</h4>
                         <div class="line-dec"></div>
                         <p>Vanilla is free HTML CSS template with Bootstrap v4.2.1 and you can apply this theme for your sites. 
                         Please share our <a rel="nofollow" href="https://templatemo.com">website</a> to your friends or collegues. Thank you.</p>
@@ -234,22 +234,22 @@ https://templatemo.com/tm-526-vanilla
                                 <div class="row">
                                     <div class="col-md-12">
                                       <fieldset>
-                                        <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                                        <input name="name" type="text" class="form-control" id="name" placeholder="Votre name..." required="" id="nommail">
                                       </fieldset>
                                     </div>
                                     <div class="col-md-12">
                                       <fieldset>
-                                        <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
+                                        <input name="email" type="email" class="form-control" id="email" placeholder="Votre email..." required="" >
                                       </fieldset>
                                     </div>
                                     <div class="col-md-12">
                                       <fieldset>
-                                        <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                                        <textarea name="message" rows="6" class="form-control" id="message" placeholder="Votre message..." required="" id="messagemail"></textarea>
                                       </fieldset>
                                     </div>
                                     <div class="col-md-12">
                                       <fieldset>
-                                        <button type="submit" id="form-submit" class="btn">Send Message</button>
+                                        <button type="submit" id="form-submit" class="btn" href="mailto:contacts@tomogrow.com">Envoyer un message</button>
                                       </fieldset>
                                     </div>
                                 </div>
@@ -266,7 +266,7 @@ https://templatemo.com/tm-526-vanilla
                            4. Copy only URL and paste it within the src="" field below
                     -->
 
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1197183.8373802372!2d-1.9415093691103689!3d6.781986417238027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb96f349e85efd%3A0xb8d1e0b88af1f0f5!2sKumasi+Central+Market!5e0!3m2!1sen!2sth!4v1532967884907" width="100%" height="390" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10591.196502321558!2d-4.47224395!3d48.422000649999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c91b0fc3358e4b%3A0x90d818e1270ba95a!2sENSTA%20Bretagne!5e0!3m2!1sfr!2sfr!4v1711441066076!5m2!1sfr!2sfr" width="100%" height="390"  frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -278,7 +278,7 @@ https://templatemo.com/tm-526-vanilla
             <div class="row">
                 <div class="col-md-12">
                     <div class="primary-button">
-                        <a href="#home">Back To Top</a>
+                        <a href="#home">Retour au début</a>
                     </div>
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -287,7 +287,7 @@ https://templatemo.com/tm-526-vanilla
                         <li><a href="#"><i class="fa fa-google"></i></a></li>
                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                     </ul>
-                    <p>Copyright &copy; 2019 Company Name 
+                    <p>Copyright &copy; 2024 Tomo'Grow
             
             		- Design: <a rel="nofollow noopener" href="https://templatemo.com"><em>TemplateMo</em></a></p>
                 </div>
