--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-526-vanilla
         <div class="container">
             <div class="first-content">
                 <center><h1>Tomo'Grow</h1></center>
-                <span><em>L'agriculture durable</em> de demain</span>
+                <span><em>L'agriculture durable de demain</em></span>
                 <div class="primary-button">
                     <a href="#services">Découvrez en plus</a>
                 </div>
